--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,10 @@ edition = "2018"
 actix-web = "3"
 mongodb = "1.2.1"
 cargo-watch = "7.7.1"
+chrono = { version = "0.4.19", features = ["serde"]}
+diesel = { version = "1.4.4", features = ["postgres","r2d2","uuidv07", "chrono"] }
+serde = "1.0.126"
+config = "0.11.0"
+dotenv = "0.15.0"
+r2d2 = "0.8.9"
+rust-argon2 = "0.8.3"
