--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,15 +9,11 @@ services:
         - "8080:8080"
       links:
         - db
-      environment: 
-        - MONGO_HOST=db
-        - MONGO_PORT=27017
     db:
-        image: 'mongo'
-        container_name: 'mongodb'
-        environment:
-            - MONGO_INITDB_DATABASE=bjira
-            - MONGO_INITDB_ROOT_USERNAME=bjira
-            - MONGO_INITDB_ROOT_PASSWORD=secret
-        ports:
-            - '27017-27019:27017-27019'
+      image: postgres
+      restart: always
+      environment:
+        - POSTGRES_DB=postgres
+        - POSTGRES_USER=postgres
+        - POSTGRES_PASSWORD=postgres
+      
